# Simple_client-server

./: README.md
Client/: CMakeLists.txt  CMakeSettings.json
Client/Program_1/: CMakeLists.txt  Client.hpp  Manager.hpp  Reader.cpp  Reader.hpp  Sender.cpp  Sender.hpp  ThException.hpp  main.cpp
Server/: CMakeLists.txt  CMakeSettings.json
Server/Program_2/: CMakeLists.txt  Program_2.h  main.cpp  server.cpp  server.hpp
